--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #444444;
+  color: #ffffff;
 }
 
 a {
@@ -119,10 +119,7 @@ h6 {
   margin: auto;
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.1); */
 }
-#header.header-scrolled,
-#header.header-inner-pages {
-  background: rgba(40, 40, 40, 0.9);
-}
+
 #header .logo {
   font-size: 28px;
   margin: 0;
@@ -172,6 +169,35 @@ h6 {
   }
 }
 
+/* More Information Button */
+.more-info-btn {
+  background-color: #041b28;
+  display: inline-block;
+  padding: 20px 40px;
+  color: #fff;
+  border-radius: 2px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+  transition: .3s all;
+  letter-spacing: -0.02em;
+  line-height: 22px;
+  border-radius: 10px;
+  margin-top: 0px;
+}
+.more-info-btn:hover {
+  /* font-weight: 800; */
+  background: #08324b;
+  color: white;
+}
+/* @media (max-width: 992px) {
+  .more-info-btn {
+    margin: 0 15px 0 0;
+    padding: 6px 18px;
+    margin-top: 0px;
+  }
+} */
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -204,7 +230,7 @@ h6 {
   padding: 25px 3px;
   font-size: 20px;
   font-weight: 600;
-  color: rgba(255, 255, 255, 0.7);
+  color: rgb(255, 255, 255);
   white-space: nowrap;
   transition: 0.3s;
   position: relative;
@@ -1062,6 +1088,13 @@ section {
   text-decoration: none;
 }
 
+.aboutImage {
+  height: 500px;
+  width: auto;
+  margin: 0 auto;
+  display: flex;
+  border-radius: 10px;
+}
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
