--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1262,12 +1262,16 @@ section {
 # Counts
 --------------------------------------------------------------*/
 .counts {
-  background: url("../img/counts-bg.jpg") center center no-repeat;
+  background: url("../../assets/img/world-map.jpg") center center no-repeat;
   background-size: cover;
-  padding: 80px 0 60px 0;
+  min-height: 600px;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat-x;
   position: relative;
 }
-.counts::before {
+/* .counts::before {
   content: "";
   position: absolute;
   background: rgba(0, 0, 0, 0.6);
@@ -1275,7 +1279,7 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
-}
+} */
 .counts .title {
   position: relative;
   color: #fff;
@@ -1298,11 +1302,11 @@ section {
   font-size: 14px;
   color: #fff;
 }
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
   .counts {
     background-attachment: fixed;
   }
-}
+} */
 
 /*--------------------------------------------------------------
 # Portfolio
