--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,9 +198,19 @@ h6 {
   }
 } */
 .more-info-btn-2 {
-  color: #dab41c; font-size:18px;font-weight: 600;
+  color: #dab41c !important;
+  font-size:18px;
+  font-weight: 600;
 }
 .more-info-btn-2:hover {
+  /* font-weight: 800; */
+  color: #212529;
+}
+.more-info-btn-3 {
+  /* color: #dab41c; font-size:18px;font-weight: 600; */
+  color: red;
+}
+.more-info-btn-3:hover {
   /* font-weight: 800; */
   color: #212529;
 }
@@ -1120,6 +1130,7 @@ section {
   box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.1);
   border-radius: 18px;
   border-bottom: 5px solid #fff;
+  color: black;
 }
 .services .icon-box .icon {
   width: 64px;
@@ -1307,6 +1318,66 @@ section {
     background-attachment: fixed;
   }
 } */
+
+/*--------------------------------------------------------------
+# Counts2
+--------------------------------------------------------------*/
+.counts2 {
+  background: url("../../assets/img/chris-liverani-9cd8qOgeNIY-unsplash.jpg") center center no-repeat;
+  background-size: cover;
+  min-height: 600px;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat-x;
+  position: relative;
+  box-shadow: inset 0 0 0 1000px rgba(4,27,40,0.8);
+}
+/* .counts::before {
+  content: "";
+  position: absolute;
+  background: rgba(0, 0, 0, 0.6);
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+} */
+.counts2 .title {
+  position: relative;
+  color: #fff;
+  margin-bottom: 40px;
+}
+.counts2 .title h3 {
+  font-size: 36px;
+  font-weight: 700;
+}
+.counts2 .counters span {
+  font-size: 48px;
+  display: block;
+  font-weight: 700;
+  color: #009961;
+}
+.counts2 .counters p {
+  padding: 0;
+  margin: 0 0 20px 0;
+  font-family: "Raleway", sans-serif;
+  font-size: 14px;
+  color: #fff;
+}
+/* @media (min-width: 1200px) {
+  .counts {
+    background-attachment: fixed;
+  }
+} */
+
+/*--------------------------------------------------------------
+# Partners
+--------------------------------------------------------------*/
+.partners{
+  background-color: white;
+  border-radius: 10px;
+}
+
 
 /*--------------------------------------------------------------
 # Portfolio
@@ -1992,10 +2063,23 @@ section {
   text-align: center;
   align-items: center;
 }
-
-/* .uk-img {
-  max-height: 100px;
-} */
+.uk-card-default .uk-card-title {
+  color: rgb(0, 0, 0);
+}
+.uk-card-caption{
+  font-size: 1.125rem;
+  position: relative;
+  font-weight: bold;
+  color: #838383;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.uk-img {
+  border-radius: 10px !important;
+}
 
 .tab1 {
   tab-size: 2;
