--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,6 +372,7 @@ h6 {
   background: rgba(15, 15, 15, 0.9);
   transition: 0.3s;
   z-index: 999;
+  height: 40vh;
 }
 .navbar-mobile .mobile-nav-toggle {
   position: absolute;
